--- a/GameOfChats/en.lproj/Localizable.strings
+++ b/GameOfChats/en.lproj/Localizable.strings
@@ -32,3 +32,7 @@
 "new_message" = "New message";
 "profile" = "Profile";
 "cancel" = "Cancel";
+"change_avatar" = "Change avatar";
+"make_photo" = "Make photo";
+"choose_from_gallery" = "Choose from gallery";
+"remove_avatar" = "Remove avatar";
