--- a/GameOfChats/en.lproj/Localizable.strings
+++ b/GameOfChats/en.lproj/Localizable.strings
@@ -36,3 +36,5 @@
 "make_photo" = "Make photo";
 "choose_from_gallery" = "Choose from gallery";
 "remove_avatar" = "Remove avatar";
+"send" = "Send";
+"your_message" = "Your message";
