--- a/GameOfChats/ru.lproj/Localizable.strings
+++ b/GameOfChats/ru.lproj/Localizable.strings
@@ -7,4 +7,37 @@
 */
 
 "login" = "Вход";
+"register" = "Регистрация";
 "logout" = "Выход";
+"your_name" = "Ваше имя";
+"email" = "Электронный адрес";
+"password" = "Пароль";
+"password_confirm" = "Повторите пароль";
+"not_registered" = "Не зарегистрированы?";
+"have_an_account" = "Уже есть аккаунт?";
+"create_account" = "Создать аккаунт";
+"ok" = "OK";
+"error" = "Ошибка";
+"input_all_fields" = "Заполните все поля";
+"passwords_dont_match" = "Пароли не совпадают";
+"invalid_email_format" = "Электронный адрес имеет неверный формат";
+"weak_password_error" = "Длина пароля должна быть не менее 6 символов";
+"email_already_in_use" = "Введенный электронынй адрес уже используется";
+"unknown_error" = "Неизвестная ошибка";
+"user_disabled" = "Аккаунт был отключен";
+"wrong_password" = "Неверный пароль";
+"wrong_email" = "Неверный пароль";
+"user_not_found" = "Пользователь не найден";
+"network_error" = "Ошибка соединения";
+"new_message" = "Новое сообщение";
+"profile" = "Профиль";
+"cancel" = "Отмена";
+"change_avatar" = "Сменить аватар";
+"make_photo" = "Сделать фото";
+"choose_from_gallery" = "Выбрать из галереи";
+"remove_avatar" = "Удалить аватар";
+"send" = "Отправить";
+"your_message" = "Ваше сообщение";
+"you" = "Вы";
+"no_users" = "Нет пользователей";
+"no_messages" = "Нет сообщений";
